# yacloud

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: main.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  main.py  pyproject.toml  pytest.ini  setup.cfg
backend/api/v1/: base.py  statistics.py  storage.py  user.py
backend/core/: config.py  logger.py
backend/db/: __init__.py  db.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 2c2fa16ab567_01_initial_db.py  9ef4f80c89fb_01_initial_db.py
backend/models/: __init__.py  user.py  user_file.py
backend/schemas/: __init__.py  status.py  user.py  user_file.py
backend/services/: __init__.py  base.py  cache.py  mixins.py  statistics.py  storage.py  user.py  user_file.py
backend/tests/: __init__.py  conftest.py  db_utils.py  factories.py  test_api.py
backend/utils/: __init__.py  utils.py
nginx/: Dockerfile  backend  nginx.conf.esh
