[tool.poetry]
name = "File storage YaCloud"
version = "0.1.0"
description = "project is aimed to download, store various types of files"
license = "MIT"
authors=["Ilya Boyur <ilya.boyur.r@ya.ru>"]

[tool.poetry.dependencies]
# Core
python = "3.11"
certifi = "2022.9.24"

# Framework
fastapi = "^0.95.1"
orjson = "^3.8.0"
pydantic = "^1.10.7"
python-dotenv = "^0.21.1"
starlette = "^0.26.1"
uvicorn = "^0.21.1"
uvloop = "^0.17.0"

# Database
asyncpg = "^0.27.0"
alembic = "^1.10.3"
SQLAlchemy = "^2.0.10"
SQLAlchemy-Utils = "^0.41.1"

# Test
anyio="^3.6.2"
factory-boy = "^3.2.1"
Faker = "^18.6.0"
httpx = "^0.24.0"
pytest = "^7.3.1"
pytest-env = "0.8.*"
pytest-sugar = "^0.9.4"
pytest-mock = "3.10.*"
fastapi-users = {extras = ["sqlalchemy"], version = "^11.0.0"}
python-multipart = "^0.0.6"
aiofiles = "^23.1.0"

[tool.poetry.dev-dependencies]
# Linting
flake8 = "6.0.*"
flake8-alphabetize = "0.0.*"
flake8-bandit = "4.1.*"
flake8-black = "0.3.*"
flake8-bugbear = "*"
flake8-builtins = "2.1.*"
flake8-class-attributes-order = "0.1.*"
flake8-comprehensions = "3.10.*"
flake8-debugger = "4.1.*"
flake8-docstrings = "1.7.*"
flake8-isort = "6.0.*"
flake8-pie = "0.16.*"
flake8-print = "5.0.*"
flake8-printf-formatting = "1.1.*"
flake8-pytest-style = "1.7.*"
flake8-walrus = "1.2.*"

# Formatting
black = "23.1.*"
isort = "5.12.*"

# Typehinting
mypy = "1.*"
mypy-extensions = "1.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
line_length = 79
include_trailing_comma = true

